; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_soc_common.c_soc_common_pcmcia_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_soc_common.c_soc_common_pcmcia_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.soc_pcmcia_socket = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"servicing IRQ %d\0A\00", align 1
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @soc_common_pcmcia_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @soc_common_pcmcia_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.soc_pcmcia_socket*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.soc_pcmcia_socket*
  store %struct.soc_pcmcia_socket* %7, %struct.soc_pcmcia_socket** %5, align 8
  %8 = load %struct.soc_pcmcia_socket*, %struct.soc_pcmcia_socket** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @debug(%struct.soc_pcmcia_socket* %8, i32 3, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load %struct.soc_pcmcia_socket*, %struct.soc_pcmcia_socket** %5, align 8
  %12 = call i32 @soc_common_check_status(%struct.soc_pcmcia_socket* %11)
  %13 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %13
}

declare dso_local i32 @debug(%struct.soc_pcmcia_socket*, i32, i8*, i32) #1

declare dso_local i32 @soc_common_check_status(%struct.soc_pcmcia_socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
